// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    You have 
    1
     
    expense
     totaling 
    $2.35
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <p>
    You have 
    23
     
    expenses
     totaling 
    $235,432.11
  </p>
</div>
`;
